styles/touhou.css
/* ... */
.percentage
{
    font-size: 2em;
}
.loading-text
{
    font-size: 3em;

    position: absolute;
    top: 30%;
    left: 50%;

    -webkit-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
}
.spinner-inner
{
    width: 120px;
    height: 120px;

    -webkit-animation: spin 1s infinite linear;
            animation: spin 1s infinite linear;

    border: 20px solid rgba(0, 0, 0, .2);
    border-top-color: black;
    border-radius: 50%;
}
.loading
{
    position: fixed;
    z-index: 999;
    top: 0;
    left: 0;

    width: 100%;
    height: 100%;

    cursor: default;

    background: white;
}
.title
{
    font-size: 3em;
}
#answer
{
    font-family: 'Poppins', sans-serif;
    font-size: 2em;

    display: inline;

    width: 500px;

    cursor: text;
    -webkit-user-select: all;
       -moz-user-select: all;
        -ms-user-select: all;
            user-select: all;
}
.easy-autocomplete::before
{
    display: block;

    content: 'Type "skip" to skip';
}
.easy-autocomplete-container
{
    left: 50%;

    width: 525px;

    -webkit-transform: translateX(-50%);
            transform: translateX(-50%);
    text-align: left;
}
.image
{
    display: none;

    height: 400px;
}
.images
{
    display: block;

    height: 400px;
}
#tick
{
    position: absolute;
    top: 250px;
    left: 50%;

    width: 300px;

    -webkit-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);

    -webkit-filter: drop-shadow(0 0 10px #0c0);
            filter: drop-shadow(0 0 10px #0c0);
}
.tick
{
    -webkit-transition: none;
            transition: none;

    stroke-dasharray: 25;
    stroke-dashoffset: 25;
}
.trigger.solved + svg .path
{
    -webkit-transition: stroke-dashoffset .1s linear;
            transition: stroke-dashoffset .1s linear;

    opacity: 1;

    stroke-dashoffset: 0;
}
.contest .image.solved
{
    -webkit-transition: opacity .5s;
            transition: opacity .5s;

    opacity: .5;
}
.loading-text
{
    text-transform: none;
}
.copyright
{
    position: absolute;
    bottom: 0;
    left: 50%;

    -webkit-transform: translate(-50%, -50%);
            transform: translate(-50%, -50%);
}
.timer
{
    position: absolute;
    top: 0;
    right: 0;
}
.timer span
{
    font-size: 3em;

    position: absolute;
    top: 53px;

    width: 100%;

    text-align: center;
	
	text-shadow: 1px 1px white, -1px 1px white, 1px -1px white, -1px -1px white;
}
.circle-animation
{
    -webkit-transition: all 1s linear;
            transition: all 1s linear;

    stroke-dasharray: 440;
    stroke-dashoffset: 440;
}
.timer svg
{
    -webkit-transform: rotate(-90deg);
            transform: rotate(-90deg);

    -webkit-filter: drop-shadow(0 0 2px rgba(0,0,0,.3));
            filter: drop-shadow(0 0 2px rgba(0,0,0,.3));
}
.content
{
    position: relative;

    width: 800px;
    height: 100%;
    margin: 0 auto;
}
.contest .skipped
{
    -webkit-transition: 1s ease-in;
            transition: 1s ease-in;
    -webkit-transform: translateX(-2000px);
            transform: translateX(-2000px);
}

.back
{
    font-size: 2em;
    line-height: 0;

    position: absolute;
    z-index: -1;
    left: 50%;

    display: none;

    -webkit-transform: translate(-50%,-200px);
            transform: translate(-50%,-200px);
}
.results
{
    font-size: 2.5em;
}

.contest
{
    display: none;
}

.stats
{
	overflow-x: hidden;
    overflow-y: auto;
	
    padding: 0;
    text-transform: none;
}

#restart
{
    font-size: 2.4em;

    display: none;

    margin: 20px;
    padding: 30px;

    color: white;
    border: none;
    background: #333;
	
	transition: .2s;
	
	cursor: pointer;
}
#restart:hover
{
    background: #666;
}
.stats .image
{
    position: relative;

    display: inline;

    height: calc(400px / 3);
    margin: 5px;

    -webkit-transition: .3s ease;
            transition: .3s ease;

    border-radius: 5px;
    background: white;
    box-shadow: 0 0 5px rgba(0,0,0,.3);
}
.stats .solved
{
    box-shadow: 0 0 10px green, 0 0 10px green;
}
.stats .skipped
{
    opacity: .7;
}
.wrapper:hover .image
{

    -webkit-transform: scale(1.2);
            transform: scale(1.2);

    opacity: 1;
}
.wrapper
{
	position: relative;
	
    font-size: 20px;

    display: inline-block;

    cursor: pointer;
    -webkit-transform: translateZ(0);

    -webkit-font-smoothing: antialiased;
}

.wrapper .tooltip
{
    text-transform: capitalize;
	
	pointer-events: none;
	
    position: absolute;
    z-index: 9999;
    left: 50%;

    display: block;
    overflow: hidden;

    margin-bottom: 15px;
    padding: 0 10px;

    -webkit-transition: all .25s ease-out;
            transition: all .25s ease-out;
    -webkit-transform: translate(-50%,-200px);
            transform: translate(-50%,-200px);
    white-space: nowrap;

    opacity: 0;
    color: black;
    border-radius: 10px;
    background: white;
    box-shadow: 0 0 1px rgba(0,0,0,.3);
}
.wrapper:hover {
	z-index: 999;
}
.wrapper:hover  .tooltip
{
	pointer-events: auto;
	
    -webkit-transform: translate(-50%,-190px);
            transform: translate(-50%,-190px);

    opacity: 1;
}

.solved + .tooltip {
    background: green;
    color: white;
}

.lte8 .wrapper .tooltip
{
    display: none;
}

.lte8 .wrapper:hover .tooltip
{
    display: block;
}

